--- a/S4/PHP_Lab/module1/q3/ba.html
+++ b/S4/PHP_Lab/module1/q3/ba.html
@@ -3,13 +3,13 @@
 	<title>BA - BMCCA</title>
 </head>
 <body>
-	<div style="display:flex;">
-        	<img src="logo.jpg" style="width:13%; height:10%; margin-right:5%;">
+	<div style="display:flex; border-bottom: solid 2px; margin-bottom: 1%;">
+        	<img src="logo.jpg" style="width:13%; height:10%; margin-right:3%;">
         	<h1 align="center" style="width:fit-content; align-self:center; font-size:251%;">Bharata Mata College Of Commerce And Arts</h1>
 	</div>
 	<div>
         	<h1>BA - Bachelor of Arts</h1>
         </div>
-	<footer>Footer of your website</footer>
+	<footer style="border-top: solid 2px;"><p align="center">© All Rights Reserved by Bharata Mata College of Commerce and Arts,Choondy,Aluva</p></footer>
 </body>
 </html>
