--- a/S4/PHP_Lab/q4/form.html
+++ b/S4/PHP_Lab/q4/form.html
@@ -6,6 +6,7 @@
     </head>
     <body onload="validate_form()">
         <form action="./form_submit.php">
+            <h2>Employee Details</h2>
             <label id="l_empcode" for="empcodeid">Employee Code:</label><br />
             <input
                 type="number"
