--- a/S4/PHP_Lab/q5/form.html
+++ b/S4/PHP_Lab/q5/form.html
@@ -4,92 +4,126 @@
         <title>Driving Licence</title>
         <script src="./validate.js"></script>
     </head>
-    <body onload="validate_form()">
-        <form action="./form_submit.php">
-            <h2>Applicant Details</h2>
-            <label id="l_name" for="nameid">Name:</label><br />
-            <input
-                type="text"
-                id="nameid"
-                name="name"
-                value=""
-                oninput="validate_form()"
-                required
-            /><br />
+    <body
+        onload="validate_form()"
+        style="display: flex; flex-direction: column"
+    >
+        <h2 style="border-bottom: solid 2px; padding-bottom: 1%">
+            Applicant Details
+        </h2>
+        <form
+            action="./form_submit.php"
+            style="width: fit-content; align-self: center"
+        >
+            <div style="display: grid; grid-template-columns: auto auto">
+                <div>
+                    <label id="l_name" for="nameid">Name:</label>
+                    <input
+                        type="text"
+                        id="nameid"
+                        name="name"
+                        placeholder="Enter your full name"
+                        value=""
+                        oninput="validate_form()"
+                        required
+                    />
+                </div>
 
-            <label id="l_address" for="addressid">Address:</label><br />
-            <textarea
-                id="addressid"
-                name="address"
-                oninput="validate_form()"
-                required
-            ></textarea
-            ><br />
+                <div>
+                    <label id="l_address" for="addressid">Address:</label>
+                    <textarea
+                        id="addressid"
+                        name="address"
+                        placeholder="Enter your house address"
+                        oninput="validate_form()"
+                        required
+                    ></textarea>
+                </div>
 
-            <label id="l_bloodgroup" for="bloodgroupid">Blood Group:</label
-            ><br />
-            <select
-                id="bloodgroupid"
-                name="bloodgroup"
-                oninput="validate_form()"
-            >
-                <option value="null">Select a group</option>
-                <option value="A+">A+</option>
-                <option value="A-">A-</option>
-                <option value="B+">B+</option>
-                <option value="B-">B-</option></select
-            ><br />
+                <div>
+                    <label id="l_bloodgroup" for="bloodgroupid"
+                        >Blood Group:</label
+                    >
+                    <select
+                        id="bloodgroupid"
+                        name="bloodgroup"
+                        oninput="validate_form()"
+                    >
+                        <option value="null">Select a group</option>
+                        <option value="A+">A+</option>
+                        <option value="A-">A-</option>
+                        <option value="B+">B+</option>
+                        <option value="B-">B-</option>
+                    </select>
+                </div>
 
-            <label id="l_dob" for="dobid">Date Of Birth:</label><br />
-            <input
-                type="date"
-                id="dobid"
-                name="dob"
-                value=""
-                oninput="validate_form() "
-                required
-            /><br />
+                <div>
+                    <label id="l_dob" for="dobid">Date Of Birth:</label>
+                    <input
+                        type="date"
+                        id="dobid"
+                        name="dob"
+                        value=""
+                        oninput="validate_form() "
+                        required
+                    />
+                </div>
 
-            <label id="l_aadharnum" for="aadharnumid">Aadhar Number:</label
-            ><br />
-            <input
-                type="number"
-                id="aadharnumid"
-                name="aadharnum"
-                value=""
-                oninput="validate_form()"
-                required
-            /><br />
+                <div>
+                    <label id="l_aadharnum" for="aadharnumid"
+                        >Aadhar Number:</label
+                    >
+                    <input
+                        type="number"
+                        id="aadharnumid"
+                        name="aadharnum"
+                        placeholder="Your 12 digit Aadhar number"
+                        value=""
+                        oninput="validate_form()"
+                        required
+                    />
+                </div>
 
-            <label id="l_mobnum" for="mobnumid">Mobile Number:</label><br />
-            <input
-                type="number"
-                id="mobnumid"
-                name="mobnum"
-                value=""
-                oninput="validate_form()"
-                required
-            /><br />
+                <div>
+                    <label id="l_mobnum" for="mobnumid">Mobile Number:</label>
+                    <input
+                        type="number"
+                        id="mobnumid"
+                        name="mobnum"
+                        placeholder="Your 10 digit mobile number"
+                        value=""
+                        oninput="validate_form()"
+                        required
+                    />
+                </div>
 
-            <label id="l_email" for="emailid">Email:</label><br />
-            <input
-                type="email"
-                id="emailid"
-                name="email"
-                value=""
-                oninput="validate_form()"
-                required
-            /><br /><br />
-
+                <div>
+                    <label id="l_email" for="emailid">Email:</label>
+                    <input
+                        type="email"
+                        id="emailid"
+                        name="email"
+                        placeholder="A valid email"
+                        value=""
+                        oninput="validate_form()"
+                        required
+                    />
+                </div>
+            </div>
             <input
                 id="submitbutton"
                 type="submit"
                 value="Submit"
                 disabled="true"
+                onmouseover="showsubmitbuttonerror()"
             />
         </form>
     </body>
     <style>
+        div {
+            display: flex;
+            flex-direction: column;
+        }
         input,
         textarea,
         select {
